fix alignment and textinput

--- a/haxe/ui/backend/ceramic/_module/styles/main.css
+++ b/haxe/ui/backend/ceramic/_module/styles/main.css
@@ -1,5 +1,5 @@
 .label, .textfield, .textarea {
-	font-size: 14px;
+	font-size: 13px;
 }
 
 .textfield {
